# anel

./: .gitignore  pyproject.toml
src/api/: main.py
src/api/routers/: candidates.py  projects.py
src/core/: settings.py
src/core/entities/: candidate.py  project.py  shared.py
src/core/entities/auth/: token.py  user.py
src/core/exceptions/: auth_exceptions.py  base.py
