[tool.poetry]
name = "anel"
version = "0.1.0"
description = ""
authors = ["ernest <shklyar.ed@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"

[tool.poetry.dev-dependencies]
pylint = "^2.17.4"

[tool.black]
line-length = 120

[tool.pylint.basic]
extension-pkg-whitelist = "pydantic"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "import-error"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
